# newton_fractal

./: .gitignore  Cargo.toml  READ_ME.txt  shell.nix
src/: fractal.rs  func.rs  main.rs
