[package]
name = "newton_fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
image = "0.24.7"
num-complex = { version = "0.4.4", features = ["serde"] }
num-traits = "0.2.17"
palette = "0.7.3"
rayon = "1.8.0"

[profile.release]
# debug = true
